<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/foto"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:src="@drawable/circle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/foto"
            android:layout_margin="20dp"
            android:orientation="vertical"
            android:background="@drawable/border">

            <TextView
                android:id="@+id/tvProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:gravity="center"
                android:text="@string/profile"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/name"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/address"
                android:textColor="@android:color/black"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/tvHobby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hobby"
                android:textSize="15sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/tvQuote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quote"
                android:textSize="15sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>